--- a/starter-page.html
+++ b/starter-page.html
@@ -92,11 +92,10 @@
       <h3 class="sitename">Brandon Johnson</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/rahul_singh1807"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://medium.com/@rahulvatsya"><i class="bi bi-medium"></i></a>
+        <a href="https://github.com/Rahulks1807"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/rahulvatsya/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
