added href link to social media sites in index.html

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
               <a href="#"><button type="button" class="btn btn-secondary">Hire me</button></a>
             </div>
             <div class="social-links">
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
+              <a href="https://x.com/rahul_singh1807"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://medium.com/@rahulvatsya"><i class="bi bi-medium"></i></a>
+              <a href="https://github.com/Rahulks1807"><i class="bi bi-github"></i></a>
+              <a href="https://www.linkedin.com/in/rahulvatsya/"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
