correct sequence of titles

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Rahul Kumar Singh</h2>
-            <p>I'm <span class="typed" data-typed-items="Cloud Architect, Site Reliability Engineer (SRE), DevOps Lead">Cloud Architect</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm <span class="typed" data-typed-items="Cloud Architect, DevOps Lead, Site Reliability Engineer (SRE)">Cloud Architect</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="#"><button type="button" class="btn btn-primary">Resume</button></a>
               <a href="#"><button type="button" class="btn btn-secondary">Hire me</button></a>
@@ -520,7 +520,7 @@
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Rahul Kumar Singh</h3>
-      <p>Cloud Architect | Site Reliability Engineer (SRE) | DevOps Lead</p>
+      <p>Cloud Architect | DevOps Lead | Site Reliability Engineer (SRE)</p>
       <div class="social-links">
         <button type="button" class="btn btn-primary">Resume</button>
         <button type="button" class="btn btn-secondary">Hire me</button>
