--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Professional_rahul.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <p class="fst-italic py-3 contentDiv">
