--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/mountain_rahul.jpeg" rel="rahul-portfolio-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -113,60 +113,38 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row skills-content skills-animation">
 
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-          </div>
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill"><span>PHP</span> <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>WordPress/CMS</span> <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
+          <div class="flex text-md-center hidden-sm-and-down xs12 sm10 md10 lg10">
+            <img src="assets/img/google-cloud-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/aws-logo.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/azure-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/Terraform-logo.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/Vault_VerticalLogo_Color_RGB.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/consul.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/bash-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/python-5.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/git.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/gitlab-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/1024px-MySQL.ff87215b43fd7292af172e2a5d9b844217262571.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/44036562.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/docker.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/kubernets.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">       
+            <img src="assets/img/sureline-logo.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/t-o-2@3x.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/jenkins-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/argocd.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/fluxcd.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/spinnaker.jpeg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/stackdriver-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/elk.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/prometheus&grafana.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/dynatrace.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
 
           </div>
 
