updated skills folder and changed wallpaper style

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
 
-      <img src="assets/img/mountain_rahul.jpeg" alt="">
+      <img src="assets/img/mountain_rahul_1.jpeg" alt="">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
@@ -121,30 +121,30 @@
         <div class="row skills-content skills-animation">
 
           <div class="flex text-md-center hidden-sm-and-down xs12 sm10 md10 lg10">
-            <img src="assets/img/google-cloud-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/aws-logo.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/azure-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/Terraform-logo.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/Vault_VerticalLogo_Color_RGB.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/consul.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/bash-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/python-5.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/git.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/gitlab-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/1024px-MySQL.ff87215b43fd7292af172e2a5d9b844217262571.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/44036562.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/docker.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/kubernets.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">       
-            <img src="assets/img/sureline-logo.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/t-o-2@3x.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/jenkins-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/argocd.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/fluxcd.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/spinnaker.jpeg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/stackdriver-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/elk.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/prometheus&grafana.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
-            <img src="assets/img/dynatrace.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/google-cloud-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/aws-logo.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/azure-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/Terraform-logo.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/Vault_VerticalLogo_Color_RGB.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/consul.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/bash-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/python-5.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/git.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/gitlab-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/1024px-MySQL.ff87215b43fd7292af172e2a5d9b844217262571.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/44036562.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/docker.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/kubernets.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">       
+            <img src="assets/img/skills/sureline-logo.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/t-o-2@3x.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/jenkins-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/argocd.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/fluxcd.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/spinnaker.jpeg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/stackdriver-1.svg" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/elk.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/prometheus&grafana.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
+            <img src="assets/img/skills/dynatrace.png" alt srcset class="img-fluid ma-2" style="max-width: 12vh;" hspace="15">
 
           </div>
 
