updated the certifications and youtube video

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/beach_rahul.jpeg" rel="icon">
   <link href="assets/img/mountain_rahul.jpeg" rel="rahul-portfolio-icon">
 
   <!-- Fonts -->
@@ -160,7 +160,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Dive into my work! Here you'll find my blog articles both individual and collaborative, videos of my public speaking appearances, and a showcase of my certifications.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -169,65 +169,63 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">Blogs</li>
-            <li data-filter=".filter-product">Collaboration Blogs</li>
-            <li data-filter=".filter-branding">Public Speaking</li>
-            <li data-filter=".filter-branding">Certifications</li>
+            <li data-filter=".filter-blog">Blogs</li>
+            <li data-filter=".filter-cblog">Collaboration Blogs</li>
+            <li data-filter=".filter-publicspeaking">Public Speaking</li>
+            <li data-filter=".filter-certifications">Certifications</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" class="img-fluid" alt="">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-blog">
+              <img src="assets/img/blogs/generateterraformpython.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <h6 class="content">Generate Terraform State & Code using Python & jinja2 templates</h6>
+                <a href="https://medium.com/@rahulvatsya/generate-terraform-state-code-using-python-jinja2-templates-dc5f6d30f7c5" target="_blank" class="btn btn-primary">Read More</a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" class="img-fluid" alt="">
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cblog">
+              <img src="assets/img/blogs/jenkins&spinnaker.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Product 1</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <h6 class="content">Jenkins and Spinnaker in GCP: Married for 7 lives</h6>
+                <a href="https://medium.com/devops-dev/jenkins-and-spinnaker-in-gcp-married-for-7-lives-79ef1b230900" target="_blank" class="btn btn-primary">Read More</a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
+              <img src="assets/img/public-speaking/migration-ps.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Branding 1</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <h6 class="content">Cloud Migration: Easy or Big Mistake?</h6>
+                <a href="https://www.youtube.com/watch?v=WDGvcBhKtZo&list=PLjiOPWDKDXnV3M8taZBbqfRrVyVym87EQ&t=24199s" target="_blank" class="btn btn-primary">Watch Here</a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+            <div class="col-lg-4 col-md-6 isotope-item filter-certifications">
+              <div class="hover-container">
+                <img src="assets/certifications/psacert.png" class="img-fluid hover-image" alt="">
+                <!-- <img src="assets/certifications/psacert.png" class="img-style hoverable" alt="gcp-professional-cloud-architect-certification"> -->
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" class="img-fluid" alt="">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-blog">
+              <img src="assets/img/blogs/labelsdiskgcp.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Product 2</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <h6 class="content">Label Disk using Automation (shell script) in Google Cloud Platform</h6>
+                <a href="https://medium.com/@rahulvatsya/label-disk-using-automation-shell-script-in-google-cloud-platform-3f26e571ec71" target="_blank" class="btn btn-primary">Read More</a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cblog">
+              <img src="assets/img/blogs/terraform&terragrunt.webp" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h6 class="content">Effective Terraform and Terragrunt Practices for Cloud Infrastructure Management on GCP</h6>
+                <a href="https://medium.com/@rahulvatsya/effective-terraform-and-terragrunt-practices-for-cloud-infrastructure-management-on-gcp-b0c17c1d3995" target="_blank" class="btn btn-primary">Read More</a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Branding 2</h4>
@@ -237,27 +235,30 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-7.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+            <div class="col-lg-4 col-md-6 isotope-item filter-certifications">
+              <div class="hover-container">
+                <img src="assets/certifications/pcdecert.png" class="img-fluid hover-image" alt="">
+                <!-- <img src="assets/certifications/psacert.png" class="img-style hoverable" alt="gcp-professional-cloud-architect-certification"> -->
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-8.jpg" class="img-fluid" alt="">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-blog">
+              <img src="assets/img/blogs/spinnaker.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Product 3</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-8.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <h6 class="content">Exploring Spinnaker’s Uncharted Horizons: Unveiling the Power of Its Hidden Features</h6>
+                <a href="https://medium.com/devops-dev/exploring-spinnakers-uncharted-horizons-unveiling-the-power-of-its-hidden-features-750295fe86cb" target="_blank" class="btn btn-primary">Read More</a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cblog">
+              <img src="assets/img/blogs/gcpcsm.webp" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h6 class="content">Service Mesh Uncharted: Google Cloud Service Mesh( aka ASM) — Part 1</h6>
+                <a href="https://medium.com/google-cloud/service-mesh-uncharted-google-cloud-service-mesh-aka-asm-part-1-34ea96c835b6" target="_blank" class="btn btn-primary">Read More</a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Branding 3</h4>
@@ -267,6 +268,70 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 isotope-item filter-certifications">
+              <div class="hover-container">
+                <img src="assets/certifications/terraformcert.png" class="img-fluid hover-image" alt="">
+                <!-- <img src="assets/certifications/psacert.png" class="img-style hoverable" alt="gcp-professional-cloud-architect-certification"> -->
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-blog">
+              <img src="assets/img/blogs/consul.webp" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h6 class="content">Service Mesh Uncharted: Hashicorp Consul</h6>
+                <a href="https://medium.com/@rahulvatsya/service-mesh-uncharted-hashicorp-consul-7dc6734021b2" target="_blank" class="btn btn-primary">Read More</a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cblog">
+              <img src="assets/img/blogs/gcpcsm-2.webp" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h6 class="content">Service Mesh Uncharted: Google Cloud Service Mesh( aka ASM) — Part 2</h6>
+                <a href="https://medium.com/google-cloud/service-mesh-uncharted-google-cloud-service-mesh-aka-asm-part-2-accd2c48e539" target="_blank" class="btn btn-primary">Read More</a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
+              <img src="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Branding 3</h4>
+                <p>Lorem ipsum, dolor sit</p>
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-blog">
+              <img src="assets/img/blogs/cloudrungpu.webp" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h6 class="content">Supercharging Cloud Run with GPU Power: A New Era for AI Workloads</h6>
+                <a href="https://medium.com/google-cloud/supercharging-cloud-run-with-gpu-power-a-new-era-for-ai-workloads-3c54fcf60cae" target="_blank" class="btn btn-primary">Read More</a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cblog">
+              <img src="assets/img/blogs/workload&workforce.webp" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h6 class="content">Workload Identity vs. Workforce Identity in GCP: A Guide for Beginners</h6>
+                <a href="https://medium.com/google-cloud/workload-identity-vs-workforce-identity-in-gcp-a-guide-for-beginners-f968c1dfe73a" target="_blank" class="btn btn-primary">Read More</a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-blog">
+              <img src="assets/img/blogs/zerotrustgke.webp" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h6 class="content">Implementing Zero Trust Security in GKE: A Practical Guide</h6>
+                <a href="https://medium.com/google-cloud/implementing-zero-trust-security-in-gke-a-practical-guide-c17f8ed52528" target="_blank" class="btn btn-primary">Read More</a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cblog">
+              <img src="assets/img/blogs/mgcsmvssgcsm.webp" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h6 class="content">Managed vs. Unmanaged Google Cloud Service Mesh: Making the Right Choice</h6>
+                <a href="https://medium.com/google-cloud/managed-vs-unmanaged-google-cloud-service-mesh-making-the-right-choice-aa4c93a9ac33" target="_blank" class="btn btn-primary">Read More</a>
+              </div>
+            </div><!-- End Portfolio Item -->
           </div><!-- End Portfolio Container -->
 
         </div>
@@ -281,7 +346,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Unlock the full potential of your cloud journey with tailored services designed to transform, automate, and optimize your infrastructure. From architecture design to cost efficiency and technical mentorship, I deliver solutions that drive innovation and reliability.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
