added Iframe for youtube video support

--- a/index.html
+++ b/index.html
@@ -27,13 +27,6 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: MyResume
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="index-page">
@@ -194,13 +187,28 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
               <img src="assets/img/public-speaking/migration-ps.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6 class="content">Cloud Migration: Easy or Big Mistake?</h6>
                 <a href="https://www.youtube.com/watch?v=WDGvcBhKtZo&list=PLjiOPWDKDXnV3M8taZBbqfRrVyVym87EQ&t=24199s" target="_blank" class="btn btn-primary">Watch Here</a>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>End Portfolio Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
+              <div class="video-container">
+                <iframe 
+                  src="https://www.youtube.com/embed/WDGvcBhKtZo?start=24199&list=PLjiOPWDKDXnV3M8taZBbqfRrVyVym87EQ" 
+                  title="Cloud Migration: Easy or Big Mistake?" 
+                  class="img-fluid" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                  allowfullscreen>
+                </iframe>
+              </div>
+              <div class="portfolio-info">
+                <h6 class="content">Cloud Migration: Easy or Big Mistake?</h6>
+              </div>
+            </div>
 
             <div class="col-lg-4 col-md-6 isotope-item filter-certifications">
               <div class="hover-container">
