--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <h2>Rahul Kumar Singh</h2>
             <p>I'm <span class="typed" data-typed-items="Cloud Architect, DevOps Lead, Site Reliability Engineer (SRE), Footballer">Cloud Architect</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="#"><button type="button" class="btn btn-primary">Resume</button></a>
-              <a href="mailto:rahul.k.singh1807@gmail.com?subject=Let's%20talk%20%3A)"><button type="button" class="btn btn-secondary">Email me</button></a>
+              <button type="button" class="btn btn-primary"><a href="assets/img/Rahul-Kumar-Singh-Resume.pdf" target="_blank" class="bgNone buttonContent">Resume</a></button>
+        <button type="button" class="btn btn-secondary"><a href="mailto:rahul.k.singh1807@gmail.com?subject=Let's%20talk%20%3A)"  class="bgNone buttonContent">Email me</a></button>
             </div>
             <div class="social-links">
               <a href="https://x.com/rahul_singh1807" target="_blank"><i class="bi bi-twitter-x"></i></a>
@@ -462,8 +462,8 @@
       <h3 class="sitename">Rahul Kumar Singh</h3>
       <p>Cloud Architect | DevOps Lead | Site Reliability Engineer (SRE) | Footballer</p>
       <div class="social-links">
-        <button type="button" class="btn btn-primary buttonContent"><a href="assets/img/Rahul-Kumar-Singh-Resume.pdf" target="_blank" class="bgNone">Resume</a></button>
-        <button type="button" class="btn btn-secondary buttonContent"><a href="mailto:rahul.k.singh1807@gmail.com?subject=Let's%20talk%20%3A)"  class="bgNone">Email me</a></button>
+        <button type="button" class="btn btn-primary"><a href="assets/img/Rahul-Kumar-Singh-Resume.pdf" target="_blank" class="bgNone buttonContent">Resume</a></button>
+        <button type="button" class="btn btn-secondary"><a href="mailto:rahul.k.singh1807@gmail.com?subject=Let's%20talk%20%3A)"  class="bgNone buttonContent">Email me</a></button>
       </div>
       <div class="container">
         <div class="copyright">
